--- a/dpayetdly/store/templates/store/main.html
+++ b/dpayetdly/store/templates/store/main.html
@@ -42,19 +42,18 @@
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li> -->
         </ul>
-        <div class="form-inline my-2 my-lg-0">
-          <a href="#"class="btn btn-warning">Login</a>
-          
-          <a href="{% url 'cart' %}">
-            <img  id="cart-icon" src="{% static 'images/00-ELASTOFONT-STORE-READY_cart-512.png' %} " width="45px">
-          </a>
-          <p id="cart-total">0</p>
-  
-        </div>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
+        <div class="form-inline my-3 my-lg-0">
+          <a href="#"class="btn btn-warning">Login</a>
+          
+          <a href="{% url 'cart' %}">
+            <img  id="cart-icon" src="{% static 'images/00-ELASTOFONT-STORE-READY_cart-512.png' %} "">
+          </a>
+          <p id="cart-total">0</p>
+        </div>
       </div>
     </div>
   </nav>
